fix problems